fixed style & small changes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Your page title here</title>
     <meta name="description" content="website description text" />
     <meta name="author" content="Your Name" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Yeseva+One&display=swap"
       rel="stylesheet"
@@ -19,14 +19,8 @@
   <body>
     <div class="content">
       <section class="negativeone">
-        <div class="homeflex">
-          <h1>From Bean to Bar</h1>
-          <div class="text-box-with-button">
-            <div class="button">
-              <button id="go-to-bottom">Start</button>
-            </div>
-          </div>
-        </div>
+        <h1>From Bean to Bar</h1>
+        <button class="button" id="go-to-bottom">Start</button>
       </section>
 
       <section class="zero">
@@ -234,7 +228,6 @@
 
         <section class="two">
           <div class="fermentation-wrapper">
-            <div class="header-and-clock">
               <div class="header-and-body">
                 <h2>Fermentation</h2>
                 <div class="fermentation-text" id="fermentation-text">
@@ -258,7 +251,6 @@
                 
                 <button id="startBtn">How Long Does Fermentation Take?</button>
               </div>
-            </div>
           </div>
         </section>
       </div>
@@ -462,7 +454,7 @@
               the flavors, turning gritty paste into smooth chocolate.
             </p>
              <!-- Button -->
-               <button id="pour-button">Pour Chocolate</button>
+               <button class="pour-button" id="pour-button">Pour Chocolate</button>
             </div>
             <div class="pour-wrapper">
               <!-- Chocolate Stream SVG -->
