--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Title in browser tab -->
-    <title>Your page title here</title>
+    <title>From Bean to Bar</title>
     <meta name="description" content="website description text" />
-    <meta name="author" content="Your Name" />
+    <meta name="author" content="Olivia Berkwitt" />
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Yeseva+One&display=swap"
