added fix for bar page

--- a/bar2.html
+++ b/bar2.html
@@ -8,6 +8,12 @@
     <title>Your page title here</title>
     <meta name="description" content="website description text" />
     <meta name="author" content="Your Name" />
+    <style>
+      ::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+}
+    </style>
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Yeseva+One&display=swap"
@@ -16,19 +22,11 @@
   </head>
   <body>
 <div class="ten">
-    <div class="wrap-text">
-        <h2>Wrapping</h2>
-        <p>
-            After the chocolate is set and released from the molds, it’s ready
-            to be wrapped. This not only protects the chocolate but also adds
-            to the experience. A well-designed wrapper can reflect the
-            quality, story, or origin of the bar inside.
-        </p>
-        </div>
+
   <div class="container">
     <canvas id="box-canvas"></canvas>
     <div class="ui-controls">
-      <h2>Scroll To Animate</h2>
+      <h3>Scroll Here</h3>
     </div>
   </div>
 </div>
